# nbga-optimization

./: .gitignore  Home.py  LICENSE  README.md  pyproject.toml  requirements.txt  script.py
algorithms/: README.md  evaluate.py  ligand.ipynb  ligand.py  tsp.ipynb  tsp.py  tsp_enhanced.ipynb  tsp_enhanced.py
evaluation_dataset/: extract.py
pages/: 1_Ligand_Optimization.py  2_TSP_Comparison.py
tsp/: extract.py  tsp.py
tsp_dataset/: extract.py
