[project]
name = "nbga-optimization"
version = "1.0.0"
description = ""
authors = [
    {name = "Anish Sarkar",email = "104695310+AnishSarkar22@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "algorithms" }
]